--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "hardhat": "^2.14.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.0"
+    "@openzeppelin/contracts": "^4.9.0",
+    "dotenv": "^16.1.1",
+    "hardhat-deploy": "^0.11.30"
   }
 }
