--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "solidity.defaultCompiler": "localNodeModule",
-    "solidity.compileUsingRemoteVersion": "v0.8.19+commit.7dd6d404"
+    "solidity.compileUsingRemoteVersion": "v0.8.19+commit.7dd6d404",
+    "cSpell.words": [
+        "ethered"
+    ]
 }
