--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["./scripts", "./test", "/.typechain","./deploy"],
-  "files": ["./hardhat.config.ts"]
+  // "include": ["./scripts", "./test", "/.typechain","./deploy"],
+  // "files": ["./hardhat.config.ts"]
 }
