--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "hardhat-project",
-  "devdependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "hardhat": "^2.14.0"
-  },
   "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@openzeppelin/contracts": "^4.9.0",
     "dotenv": "^16.1.1",
     "hardhat-deploy": "^0.11.30"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "hardhat": "^2.14.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
