--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@openzeppelin/contracts": "^4.9.0",
+    "@openzeppelin/test-helpers": "^0.5.10",
+    "decimal.js": "10.2",
     "dotenv": "^16.1.1",
     "hardhat-deploy": "^0.11.30"
   },
