--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "hardhat-project",
+  "name": "@the-hedgehog-io/contracts",
+  "version": "0.1.0",
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
@@ -7,6 +8,7 @@
     "@openzeppelin/test-helpers": "^0.5.10",
     "decimal.js": "10.2",
     "dotenv": "^16.1.1",
+    "hardhat-abi-exporter": "^2.10.1",
     "hardhat-deploy": "^0.11.30"
   },
   "devDependencies": {
@@ -14,5 +16,11 @@
     "hardhat": "^2.14.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
-  }
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "files": [
+    "dist"
+  ]
 }
