--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@the-hedgehog-io/contracts",
   "version": "0.1.0",
-  "dependencies": {
+  "devDependencies": {
+    "hardhat": "^2.14.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@openzeppelin/contracts": "^4.9.0",
@@ -10,12 +13,6 @@
     "dotenv": "^16.1.1",
     "hardhat-abi-exporter": "^2.10.1",
     "hardhat-deploy": "^0.11.30"
-  },
-  "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "hardhat": "^2.14.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
