--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
-  },
-  // "include": ["./scripts", "./test", "/.typechain","./deploy"],
-  // "files": ["./hardhat.config.ts"]
+    "skipLibCheck": true,
+    "resolveJsonModule": true
+  }
 }
