--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "solidity.defaultCompiler": "localNodeModule",
     "solidity.compileUsingRemoteVersion": "v0.8.19+commit.7dd6d404",
     "cSpell.words": [
-        "ethered"
+        "ethered",
+        "Unstake"
     ]
 }
