--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dotenv": "^16.1.1",
     "hardhat": "^2.17.2",
     "hardhat-abi-exporter": "^2.10.1",
-    "hardhat-deploy": "^0.11.30"
+    "hardhat-deploy": "^0.11.30",
+    "ethers": "^6.7.1"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
