feat: update deployment scripts

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 # Private key of Deployer
 PK_DEPLOYER=
-# Public address sof Deployer. Will be asserted that is derived from private key
-PUBLIC_ADDRESS_DEPLOYER= 
+
+DEPLOYMENT_PROTOCOL_TOKEN_CHAIN_ID=1
+DEPLOYMENT_PROTOCOL_CHAIN_ID=42161
+
+REPORT_GAS=false
