--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "@the-hedgehog-io/contracts",
   "version": "0.4.0",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@openzeppelin/contracts": "^4.9.0",
-    "@openzeppelin/test-helpers": "^0.5.10",
-    "dotenv": "^16.1.1",
-    "hardhat": "^2.22.9",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@openzeppelin/contracts": "^4.9.6",
+    "dotenv": "^16.4.7",
+    "hardhat": "^2.22.18",
     "hardhat-abi-exporter": "^2.10.1",
-    "hardhat-deploy": "^0.11.30"
+    "hardhat-deploy": "^0.14.0"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
@@ -23,7 +22,8 @@
     "hardhat": "hardhat"
   },
   "dependencies": {
-    "@types/timestring": "^6.0.5",
+    "@types/timestring": "^7.0.0",
+    "ethers": "^6.13.5",
     "timestring": "^7.0.0"
   }
 }
